--- a/ckan/public/base/less/layout.less
+++ b/ckan/public/base/less/layout.less
@@ -144,7 +144,6 @@
 .primary {
     .primary {
         float: left;
-        width: 467px;
         margin-left: 0;
         margin-bottom: 20px;
         h1,
@@ -157,9 +156,6 @@
         }
     }
     .tertiary {
-        float: left;
-        width: 180px;
-        margin-left: 18px;
         margin-bottom: 20px;
     }
 }
